# EECS476-MobileRobotics

./: .bashrc  README.md
Exercise/: learning_ros.md  learning_ros.md~  using_git.md  using_ros.md
Homework/PS1/my_stdr_control/: CMakeLists.txt~  package.xml~
Homework/PS2/my_stdr_control/: CMakeLists.txt~  README.md~
Homework/PS3/my_ros_service/: CMakeLists.txt~
Homework/PS4/: readme.md  readme.md~
Homework/PS4/mobot_action_server/: CMakeLists.txt  package.xml
Homework/PS4_new/: readme.md  readme.md~
Homework/PS4_new/Report/: PS04_report.docx
Homework/PS4_new/mobot_action_server/: CMakeLists.txt  package.xml
Homework/PS4_new/mobot_action_server/action/: path.action
Homework/PS4_new/mobot_action_server/launch/: mobot_action_setup.launch
Homework/PS4_new/mobot_action_server/src/: mobot_action_client.cpp  mobot_action_server.cpp
Homework/PS7/: readme.md
Homework/PS7/my_lin_steering_client/: CMakeLists.txt  package.xml
Homework/PS7/my_lin_steering_client/src/: my_lin_steering_client.cpp
Homework/PS7/video/: video_link.md
Homework/PS8/: readme.md  readme.md~
Homework/PS8/code/my_open_loop_console/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
Homework/PS8/code/my_open_loop_console/launch/: my_robot_move_in_known_map.launch~
Homework/PS8/code/my_open_loop_console/src/: my_open_loop_console.cpp  my_open_loop_console.cpp~
Homework/PS8_alpha/: readme.md
PS4_new/mobot_action_server/: README.md
PS4_new/mobot_lidar_alarm/: package.xml
PS4_new/my_action_server/: package.xml
PS9/: readme.md
PS9/my_pcl_utils/: CMakeLists.txt  README.md  package.xml
(+74 files in other folders)
